Locked Camera Dollying is Limited by Center of Last Used View #56934

Closed
opened 2018-09-26 22:26:32 +02:00 by Jacob Gustafson · 8 comments

System Information
Fedora Linux 28

Blender Version
Broken: Blender 2.8 Alpha 2
Date: 2018-09-23 22:34
Hash: 2abbe1d125
Branch: blender2.8
Worked: (did not work in 2.7 either)

Short description of error
Dollying using Lock Camera to View is arbitrarily limited to the zoom range of the view, and this value is saved to the camera in some unknown way.

Exact steps for others to reproduce the error
In attached blend file (or new blend file zoomed in until zooming slows down), hover over view that is locked to camera. Roll the scroll wheel or drag the Blender 2.8 dolly button. The camera will move forward only to the focal point of the view. Strangely, if you unlock the view, go to another view, place an object far away, then View, Frame Selected, then lock that camera to view, your zoom is still limited to the arbitrary point to which it was locked in the first view. This means the camera must have saved that old view information in some unknown way such as maybe it has its own view that is an old copy of the view to which it was locked before. The only workaround is to then (after locking camera to view) make an object far away then click View, Frame Selected.
Expected behavior: Dollying (with scroll wheel or Blender 2.8 dolly button) should be unlimited (should simply to a move operation). The "View" target of the camera's internal view should not be stored in the camera or obtained from the last view to which it was locked--it should perhaps be automatically determined when the camera moves (perhaps it would be a point projected from the camera's location to the camera's clipping end).

**System Information** Fedora Linux 28 **Blender Version** Broken: Blender 2.8 Alpha 2 Date: 2018-09-23 22:34 Hash: 2abbe1d125f Branch: blender2.8 Worked: (did not work in 2.7 either) **Short description of error** Dollying using Lock Camera to View is arbitrarily limited to the zoom range of the view, and this value is saved to the camera in some unknown way. **Exact steps for others to reproduce the error** In attached blend file (or new blend file zoomed in until zooming slows down), hover over view that is locked to camera. Roll the scroll wheel or drag the Blender 2.8 dolly button. The camera will move forward only to the focal point of the view. Strangely, if you unlock the view, go to another view, place an object far away, then View, Frame Selected, then lock that camera to view, your zoom is still limited to the arbitrary point to which it was locked in the first view. This means the camera must have saved that old view information in some unknown way such as maybe it has its own view that is an old copy of the view to which it was locked before. The only workaround is to then (after locking camera to view) make an object far away then click View, Frame Selected. Expected behavior: Dollying (with scroll wheel or Blender 2.8 dolly button) should be unlimited (should simply to a move operation). The "View" target of the camera's internal view should not be stored in the camera or obtained from the last view to which it was locked--it should perhaps be automatically determined when the camera moves (perhaps it would be a point projected from the camera's location to the camera's clipping end).

Added subscriber: @mixmystery

Added subscriber: @mixmystery
[3da5 SAMPLED motion blur primitive city.blend](https://archive.blender.org/developer/F4827729/3da5_SAMPLED_motion_blur_primitive_city.blend)

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-09-30 18:36:56 +02:00

@ideasman42 think you are the guy here :)

@ideasman42 think you are the guy here :)

The behavior where the last orbit point was used by the camera has been changed 3f31c28a02.

However the zoom-level (distance from the view-point to the point your orbiting around) will still be used.

See: https://blender.stackexchange.com/questions/644

Note that you're not using dolly by the sounds of it, your using zoom, details posted in answer above.

The behavior where the last orbit point was used by the camera has been changed 3f31c28a02. However the zoom-level (distance from the view-point to the point your orbiting around) will still be used. See: https://blender.stackexchange.com/questions/644 Note that you're not using dolly by the sounds of it, your using zoom, details posted in answer above.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'

Update, this caused issues with zoom, so had to revert.

The root issues is that blender has a point of interest and a distance from that. How to set these when going into camera view isn't straightforward.

Most of the issues you mention are resolved by using dolly, not zoom though.

Update, this caused issues with zoom, so had to revert. The root issues is that blender has a point of interest and a distance from that. How to set these when going into camera view isn't straightforward. Most of the issues you mention are resolved by using dolly, not zoom though.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56934
No description provided.